--- a/templates/ticket_template.html
+++ b/templates/ticket_template.html
@@ -37,6 +37,8 @@
         <p><strong>ID del Ticket:</strong> #{{ ticket_id }}</p>
         <p><strong>Nombre del Torneo:</strong> {{ tournament_name }}</p>
         <p><strong>Nombre del Usuario:</strong> {{ user_name }}</p>
+        <p><strong>Comision por Olimpus:</strong> ${{ comission }}</p>
+        <p><strong>Total pagado:</strong> ${{ total_price }}</p>
         <div class="qr-code">
             <img id='barcode'
                 src="https://api.qrserver.com/v1/create-qr-code/?data={{qr_code_url}}&amp;size=1000x1000"
